--- a/src/components/Field/field.module.css
+++ b/src/components/Field/field.module.css
@@ -1,4 +1,5 @@
 .field {
+  position: relative;
   width: 200px;
   height: 200px;
 
@@ -10,4 +11,24 @@
 
 .error {
   border: 2px solid red;
+}
+
+.modal {
+  position: absolute;
+  display: flex;
+  left: 5px;
+  bottom: 5px;
+}
+
+.button {
+  padding: 4px 8px;
+  margin: 2px;
+  border: 1px solid black;
+  border-radius: 2px;
+  text-transform: capitalize;
+}
+
+.button:hover {
+  background-color: black;
+  color: white;
 }
