--- a/src/components/Field/field.module.css
+++ b/src/components/Field/field.module.css
@@ -14,6 +14,48 @@
   place-items: center;
 }
 
-.error {
-  border: 2px solid red;
+.plantation {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 5px;
+}
+
+.plantation img {
+  width: 80px;
+  transform: rotate(-2deg);
+}
+
+.growth img {
+  animation: appear var(--i) linear;
+}
+
+.pulse img {
+  animation: pulse 3s linear infinite;
+}
+
+.pulse:hover img {
+  filter: drop-shadow(1px 1px 1px rgba(0, 0, 0, 1));
+}
+
+@keyframes appear {
+  0% {
+    transform: scale3d(0, 0, 0) rotate(-2deg);
+  }
+  100% {
+    transform: scale3d(1, 1, 1) rotate(-2deg);
+  }
+}
+
+@keyframes pulse {
+  0% {
+    transform: rotate(-2deg) scale(1);
+  }
+
+  50% {
+    transform: scale(0.9);
+  }
+
+  100% {
+    transform: rotate(-2deg) scale(1);
+  }
 }
