--- a/src/components/Field/field.module.css
+++ b/src/components/Field/field.module.css
@@ -59,3 +59,17 @@
     transform: rotate(-2deg) scale(1);
   }
 }
+
+.move img {
+  animation: move 2s ease-in-out;
+  animation-duration: var(--offset);
+  animation-fill-mode: forwards;
+}
+@keyframes move {
+  100% {
+    transform: translate(
+      calc(var(--image-x) + 100vw + 100px),
+      calc(100vh - var(--image-y) + 100px)
+    );
+  }
+}
