--- a/src/components/modal/modal.module.css
+++ b/src/components/modal/modal.module.css
@@ -13,11 +13,10 @@
 }
 
 .container {
-  border-radius: 10px;
+  box-shadow: 0px 0 21px 2px #7c5126;
   position: relative;
   display: flex;
   justify-content: center;
-  box-shadow: 10px 10px 5px -6px #000;
 }
 
 .button {
