--- a/src/components/modal/modal.module.css
+++ b/src/components/modal/modal.module.css
@@ -34,6 +34,8 @@
   color: #fff;
   cursor: pointer;
   transition: background-color 0.3s ease;
+
+  text-transform: uppercase;
 }
 
 .button:hover {
