--- a/src/components/Field/field.module.css
+++ b/src/components/Field/field.module.css
@@ -1,6 +1,14 @@
 .container {
   position: relative;
   user-select: none;
+
+  cursor: pointer;
+
+  transition: transform 0.2s ease-in-out;
+}
+
+.container:hover {
+  transform: scale(1.1);
 }
 
 .field {
