--- a/src/components/modal/modal.module.css
+++ b/src/components/modal/modal.module.css
@@ -18,17 +18,19 @@
 }
 
 .container {
-  box-shadow: 0px 0 21px 2px #7c5126;
   position: relative;
   display: flex;
   justify-content: center;
+  flex-direction: column;
 }
 
 .button {
   all: unset;
   position: absolute;
   padding: 15px 80px;
-  bottom: -30px;
+  bottom: -40px;
+  left: 50%;
+  transform: translate(-50%);
   font-weight: 700;
   font-size: 18px;
   border-radius: 4px;
@@ -45,9 +47,9 @@
 }
 
 .header {
-  position: absolute;
-  top: -10px;
-  left: 0;
+  /* position: absolute; */
+  /* top: -10px; */
+  /* left: 0; */
   text-align: center;
   width: 100%;
   padding: 10px 0;
