--- a/src/components/storage/storage.module.css
+++ b/src/components/storage/storage.module.css
@@ -1,11 +1,6 @@
 .tableContainer {
   width: 100%;
   border-collapse: collapse;
-  margin-top: 40px;
-}
-
-.tableHead {
-  margin-top: 20px;
 }
 
 .tableContainer th,
@@ -27,6 +22,11 @@
   border-right: 1px solid #f5deb3;
 }
 
+.tableContainer tr:nth-child(odd) td:last-child,
+.tableContainer tr:nth-child(even) td:last-child {
+  border-right: none;
+}
+
 .tableContainer tr:nth-child(even) {
   background-color: #f5deb3;
   transition: background-color 0.2s ease-in;
@@ -44,4 +44,25 @@
 
 .cropImage {
   width: 50px;
+}
+
+.button {
+  all: unset;
+  padding: 5px 10px;
+  font-weight: 700;
+  border-radius: 2px;
+  background-color: #8b4513;
+  color: #fff;
+  cursor: pointer;
+  transition: transform 0.3s ease;
+
+  text-transform: uppercase;
+}
+
+.button:hover {
+  transform: translateY(-3px);
+}
+
+.wrapper {
+  display: flex;
 }
