--- a/src/components/storage/sell-menu.module.css
+++ b/src/components/storage/sell-menu.module.css
@@ -30,6 +30,7 @@
   border-bottom: 1px solid #ccc;
   border-radius: 2px;
 
+  max-width: 75px;
   text-align: center;
   font-size: 14px;
   margin-left: 5px;
