--- a/src/components/shop/buy-menu.module.css
+++ b/src/components/shop/buy-menu.module.css
@@ -71,14 +71,29 @@
   font-weight: bold;
 }
 
-.image {
+/* .bag {
+  width: 75px;
+  height: 75px;
+  position: relative;
+} */
+.imageContainer {
   background-color: #f5deb3;
-
-  width: 50px;
-  height: 50px;
-  padding: 15px;
-  margin: 0 auto;
   border-radius: 50%;
+  padding: 20px 30px;
+  margin: 0 auto;
+  position: relative;
+}
+
+.image {
+  position: absolute;
+  top: calc(50% - 15px);
+  left: calc(50% - 25px);
+  width: 50px;
+}
+
+.bag {
+  width: 100px;
+  height: 100px;
 }
 
 .cropImage {
